--- a/boss.ini
+++ b/boss.ini
@@ -580,3 +580,27 @@ gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
+
+bossname = 프래머
+gentime = 10:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+
+bossname = 다지안
+gentime = 10:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+
+bossname = 보르트
+gentime = 10:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+
+bossname = 파라크
+gentime = 10:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
