--- a/boss.ini
+++ b/boss.ini
@@ -455,7 +455,7 @@ nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 2칼리바
+bossname = 우칼리바
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
