--- a/boss.ini
+++ b/boss.ini
@@ -694,3 +694,21 @@ gentime = 08:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
+
+bossname = 티알피
+gentime = 14:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+
+bossname = 에다
+gentime = 14:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+
+bossname = 키르니르
+gentime = 14:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
